# Django-Start

./: .gitignore
Django-1/: pyproject.toml  requirements.txt
Django-1/core/: settings.py  urls.py
